Bug 73550 - FILESAVE: Files are getting corrupted due to wrong place of <w:rPr> tags
Summary: FILESAVE: Files are getting corrupted due to wrong place of <w:rPr> tags
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Nikhil Walvekar
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-13 11:49 UTC by Rohit Deshmukh
Modified: 2014-05-25 20:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Original file (1.43 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-01-13 11:49 UTC, Rohit Deshmukh
Details
Screenshot Word for Mac 2011. Original left, RT right (267.74 KB, image/png)
2014-01-18 10:44 UTC, Jorendc
Details
RT file, opens without corruption using Word for Mac 2011. (1.41 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-01-18 10:46 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rohit Deshmukh 2014-01-13 11:49:21 UTC
Created attachment 91943 [details]
Original file

Steps to reproduce:
1. Load the attached DOCX in LO
2. Save as NEW.DOCX
3. Open the NEW.DOCX in Word


Current behavior:
File gets corrupt

Expected behavior:
File should open without any error
Comment 1 Jorendc 2014-01-18 10:44:19 UTC
Hi Rohit,

I fail to reproduce the corruption, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha0+ Build ID: 99159a618fd1ea90a2bc8a72621c88a4cf26e6f5
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-01-17_06:36:23

Round tripped file opens without a warning using Word for Mac 2011. Looking at the # of pages, it's both 42 (imported in LibreOffice, imported in Word for Mac). 

* Opening _original_ file in LibreOffice, text ends at the beginning of page 42.
* Opening _original_ file in Word result in a half-filled page 42 :-). 

Nitpicking I guess, especially when there are 42 pages. Not sure what 'introduces' this behavior (maybe just differnt font-renderings?).

* Opening _RT_ file in Word, it result in 2 extra lines + 1 line of links (shifted from previous page, compared to original). (See attached screenshot).

So, I'm not sure I can reproduce this behavior :-).

Kind regards,
Joren
Comment 2 Jorendc 2014-01-18 10:44:51 UTC
Created attachment 92323 [details]
Screenshot Word for Mac 2011. Original left, RT right
Comment 3 Jorendc 2014-01-18 10:46:29 UTC
Created attachment 92324 [details]
RT file, opens without corruption using Word for Mac 2011.

RT file generated using LibreOffice version mentioned above (Build ID: 99159a618fd1ea90a2bc8a72621c88a4cf26e6f5)

Kind regards,
Joren
Comment 4 Nikhil Walvekar 2014-01-22 10:00:59 UTC
Hi Joren,

Rohit mostly pushed changes before you verified it.
Right now I found issues that for a empty paragraph rpr is still missing. This is from interoperability point of view.
Comment 5 Jorendc 2014-01-22 17:53:54 UTC
(In reply to comment #4)
> Hi Joren,
> 
> Rohit mostly pushed changes before you verified it.

Sure :-). But I'm just trying to reproduce the behavior. If I can't, I just can't. That will not prove there is _no_ issue with the file at all :-). Patches can always be send for review anyway ;-). Even for non-confirmed bugs. 

> Right now I found issues that for a empty paragraph rpr is still missing.
> This is from interoperability point of view.

Especially with this kind of things :). QA Volunteers (me included) don't always have that detailed knowledge about it :-). We just try to reproduce the mentioned behavior. Nice catch though! Great to see that improved.
Comment 6 Commit Notification 2014-01-30 09:10:22 UTC
Nikhil Walvekar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=36c5078d244e5a757d92cdc0f183ebd11712f6fc

fdo#73550 : Fix for files having spacing issues due to missing pPr/rPr



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.