fdo#73550 : Fix for files having spacing issues due to missing pPr/rPr for empty paragraphs.

Change-Id: I7e73a750982a0bd57da602379ea47c8bf9c194fe
Reviewed-on: https://gerrit.libreoffice.org/7587
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>